Cleanups and tidying up on tasks, configs registrations